# ParallelEdgeDetection

./: .gitignore  CMakeLists.txt  README.md  cuda_image.cu  cuda_image.hpp  edgedetect_tests.cpp  image.cpp  image.hpp  main.cpp  parallel_image.cpp  parallel_image.hpp  stb_instantiation.cpp  user_tests.cpp
